--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1"
   },
+  "engines": {
+    "node": "22.11.0"
+    },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.0.9",
