--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "^5.0.1"
   },
   "engines": {
-    "node": "22.11.0"
+    "node": "18.x"
     },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
